added new navigate to bestbuy