@@ -18,8 +18,9 @@ public class SimpleBestBuyPlaywright {
     public static void main(String[] args) {
         Playwright playwright = Playwright.create();
         Browser browser = playwright.chromium().launch(new BrowserType.LaunchOptions().setHeadless(false));
-        BrowserContext browserContext = browser.newContext(new Browser.NewContextOptions().setPermissions(Arrays.asList("geolocation")));
-        Page page = browserContext.newPage();
+        Page page = browser
+                .newContext(new Browser.NewContextOptions().setPermissions(List.of("geolocation")))
+                .newPage();
 
         page.navigate("https://www.bestbuy.com/?intl=nosplash");
 
